--- a/web_widget_domain_editor_dialog/i18n/web_widget_domain_editor_dialog.pot
+++ b/web_widget_domain_editor_dialog/i18n/web_widget_domain_editor_dialog.pot
@@ -1,12 +1,12 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* web_widget_domain_editor_dialog
+# 	* web_widget_domain_editor_dialog
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15,22 +15,14 @@ msgstr ""
 
 #. module: web_widget_domain_editor_dialog
 #. openerp-web
-#: code:addons/web_widget_domain_editor_dialog/static/src/js/widget_domain_editor_dialog.js:18
-#, python-format
-msgid "Custom Filter"
-msgstr ""
-
-#. module: web_widget_domain_editor_dialog
-#. openerp-web
-#: code:addons/web_widget_domain_editor_dialog/static/src/js/basic_fields.js:21
+#: code:addons/web_widget_domain_editor_dialog/static/src/js/basic_fields.js:0
 #, python-format
 msgid "Select records..."
 msgstr ""
 
 #. module: web_widget_domain_editor_dialog
 #. openerp-web
-#: code:addons/web_widget_domain_editor_dialog/static/src/js/widget_domain_editor_dialog.js:31
+#: code:addons/web_widget_domain_editor_dialog/static/src/js/widget_domain_editor_dialog.js:0
 #, python-format
 msgid "Selected domain"
 msgstr ""
-
