--- a/web_widget_domain_editor_dialog/i18n/web_widget_domain_editor_dialog.pot
+++ b/web_widget_domain_editor_dialog/i18n/web_widget_domain_editor_dialog.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -14,15 +14,15 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: web_widget_domain_editor_dialog
-#. openerp-web
-#: code:addons/web_widget_domain_editor_dialog/static/src/js/basic_fields.js:0
+#. odoo-javascript
+#: code:addons/web_widget_domain_editor_dialog/static/src/js/domain_field.esm.js:0
 #, python-format
 msgid "Select records..."
 msgstr ""
 
 #. module: web_widget_domain_editor_dialog
-#. openerp-web
-#: code:addons/web_widget_domain_editor_dialog/static/src/js/widget_domain_editor_dialog.js:0
+#. odoo-javascript
+#: code:addons/web_widget_domain_editor_dialog/static/src/js/domain_field.esm.js:0
 #, python-format
 msgid "Selected domain"
 msgstr ""
