--- a/web_widget_image_download/i18n/web_widget_image_download.pot
+++ b/web_widget_image_download/i18n/web_widget_image_download.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -14,7 +14,7 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: web_widget_image_download
-#. openerp-web
+#. odoo-javascript
 #: code:addons/web_widget_image_download/static/src/xml/web_widget_image_download.xml:0
 #: code:addons/web_widget_image_download/static/src/xml/web_widget_image_download.xml:0
 #, python-format
