--- a/web_notify_upgrade/i18n/fr.po
+++ b/web_notify_upgrade/i18n/fr.po
@@ -6,12 +6,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. module: web_notify_upgrade
 #: model:ir.model,name:web_notify_upgrade.model_ir_model_data
@@ -24,13 +28,6 @@ msgstr "Model Data"
 #, python-format
 msgid "Reload"
 msgstr "Recharger"
-
-#. module: web_notify_upgrade
-#. odoo-python
-#: code:addons/web_notify_upgrade/models/ir_model.py:0
-#, python-format
-msgid "Upgrade Notification"
-msgstr "Notification de mise à jour"
 
 #. module: web_notify_upgrade
 #. odoo-python
