--- a/web_view_rtree/i18n/fr.po
+++ b/web_view_rtree/i18n/fr.po
@@ -20,10 +20,31 @@ msgid "Action Window View"
 msgstr ""
 
 #. module: web_view_rtree
+#. odoo-javascript
+#: code:addons/web_view_rtree/static/src/views/rtree/rtree_model.esm.js:0
+#, python-format
+msgid "Error"
+msgstr "Erreur"
+
+#. module: web_view_rtree
+#. odoo-javascript
+#: code:addons/web_view_rtree/static/src/views/rtree/rtree_model.esm.js:0
+#, python-format
+msgid "It is not possible to reparent records in a tree view."
+msgstr "Il n'est pas possible de reparenter des enregistrement dans une vue en arborescence."
+
+#. module: web_view_rtree
 #: model:ir.model.fields.selection,name:web_view_rtree.selection__ir_actions_act_window_view__view_mode__rtree
 #: model:ir.model.fields.selection,name:web_view_rtree.selection__ir_ui_view__type__rtree
 msgid "RTree"
 msgstr ""
+
+#. module: web_view_rtree
+#. odoo-javascript
+#: code:addons/web_view_rtree/static/src/views/rtree/rtree_model.esm.js:0
+#, python-format
+msgid "This type of search domain is not supported in a tree view."
+msgstr "Ce type de domaine de recherche n'est pas pris en charge dans une vue en arborescence."
 
 #. module: web_view_rtree
 #. odoo-javascript
