--- a/web_view_rtree/i18n/web_view_rtree.pot
+++ b/web_view_rtree/i18n/web_view_rtree.pot
@@ -19,9 +19,30 @@ msgid "Action Window View"
 msgstr ""
 
 #. module: web_view_rtree
+#. odoo-javascript
+#: code:addons/web_view_rtree/static/src/views/rtree/rtree_model.esm.js:0
+#, python-format
+msgid "Error"
+msgstr ""
+
+#. module: web_view_rtree
+#. odoo-javascript
+#: code:addons/web_view_rtree/static/src/views/rtree/rtree_model.esm.js:0
+#, python-format
+msgid "It is not possible to reparent records in a tree view."
+msgstr ""
+
+#. module: web_view_rtree
 #: model:ir.model.fields.selection,name:web_view_rtree.selection__ir_actions_act_window_view__view_mode__rtree
 #: model:ir.model.fields.selection,name:web_view_rtree.selection__ir_ui_view__type__rtree
 msgid "RTree"
+msgstr ""
+
+#. module: web_view_rtree
+#. odoo-javascript
+#: code:addons/web_view_rtree/static/src/views/rtree/rtree_model.esm.js:0
+#, python-format
+msgid "This type of search domain is not supported in a tree view."
 msgstr ""
 
 #. module: web_view_rtree
